# tc-fase4-lstm

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
artifacts/: metadata.json  metrics.json  model.pt  target_scaler.joblib
src/stock_lstm/: __init__.py  api.py  config.py  data.py  features.py  metrics.py  model.py  predict.py  schemas.py  train.py  utils.py
tests/: test_features.py  test_metrics.py
