[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-lstm-tech-challenge"
version = "0.1.0"
description = "LSTM pipeline and FastAPI deployment for stock closing price forecasting."
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "fastapi>=0.115,<1",
    "uvicorn[standard]>=0.34,<1",
    "pandas>=2.2,<3",
    "numpy>=1.26,<3",
    "scikit-learn>=1.4,<2",
    "joblib>=1.3,<2",
    "yfinance>=0.2.50,<0.3",
    "torch>=2.3,<3",
    "prometheus-client>=0.20,<1",
    "pydantic>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8,<9",
    "ruff>=0.7,<1",
    "httpx>=0.28,<1",
]

[project.scripts]
stock-lstm-train = "stock_lstm.train:main"
stock-lstm-api = "stock_lstm.api:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"
